--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "type": "github",
     "url": ""
   },
+  "bin": "bin/generate-mongoose-types",
   "description": "Type definition generator for mongoose",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "scripts": {
+    "build": "rimraf dist && tsc",
     "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.14",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.8",
     "jest": "^26.5.3",
@@ -36,7 +39,9 @@
     ]
   },
   "dependencies": {
+    "commander": "^6.1.0",
     "lodash.camelcase": "^4.3.0",
-    "lodash.upperfirst": "^4.3.1"
+    "lodash.upperfirst": "^4.3.1",
+    "ts-node": "^9.0.0"
   }
 }
